# lexilens

./: .gitignore  demo-script.md  render.yaml  report.md
.zenflow/tasks/ce-bian-lan-dan-chu-luo-ji-f37e/: plan.md  report.md
.zenflow/tasks/correct-tab-switching-behavior-50ad/: plan.md  report.md
.zenflow/tasks/floating-button-37e4/: investigation.md  plan.md
backend/: .env.example  .gitignore  README.md
backend/app/: config.py  main.py  prompt_config.py
backend/tests/: test_deferred_layer_endpoints.py  test_prompt_builder.py  test_streaming.py
docs/: DEPLOYMENT.md  MATERIALS.md  README.formal.md
extension/: .env.demo  .env.formal  .gitignore  README.md  manifest.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
extension/public/: .gitkeep
landing/: package.json  pnpm-lock.yaml  tsconfig.json
landing/app/: layout.tsx  page.tsx
landing/public/: lexilens-formal.crx
landing/styles/: globals.css
lexilens-demo/: README.md  report.md
lexilens-demo/backend/: pyproject.toml
lexilens-demo/backend/app/: config.py
lexilens-demo/backend/app/api/routes/: lexical_map.py
lexilens-demo/backend/app/models/: interests.py  request.py  response.py
lexilens-demo/backend/app/services/: llm_orchestrator.py  openrouter.py
lexilens-demo/backend/tests/: test_llm_orchestrator_layers.py  test_prompt_builder.py  test_streaming.py
lexilens-demo/extension/: .env.example  .eslintrc.json  manifest.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: package-demo.sh  package-formal-crx.sh  package-formal-zip.sh
(+102 files in other folders)
